--- a/cv.tex
+++ b/cv.tex
@@ -1,123 +1,97 @@
 %!TEX TS-program = xelatex
-\documentclass[]{friggeri-cv}
-\addbibresource{bibliography.bib}
+\documentclass[]{cv}
 
 \begin{document}
-\header{adrien}{friggeri}
-       {social network analyst}
+\header{will}{king}
+       {junior developer}
 
 % In the aside, each new line forces a line break
 \begin{aside}
   \section{about}
-    31 rue Smith
-    69002 Lyon
-    France
-    ~
-    \href{mailto:adrien@friggeri.net}{adrien@friggeri.net}
-    \href{http://friggeri.net}{http://friggeri.net}
-    \href{http://facebook.com/adrien}{fb://adrien}
-  \section{languages}
-    bilingual french/english
-    spanish \& italian notions
+     908-248-2156
+    \href{mailto:william@boutine.com}{william@boutine.com}
+    \href{http://willyum.github.com}{willyum.github.com}
+    \href{http://facebook.com/kingwillah}{fb} | \href{http://www.linkedin.com/profile/view?id=158614185}{linkin} | \href{https://twitter.com/#!/wking124}{tweet}
   \section{programming}
-    {\color{red} $\varheartsuit$} JavaScript
-    (ES5, node.js)
-    Python, C, OCaml
+    Ruby, Rails
+    JavaScript
+    CoffeeScript
+    Backbone.js
+    HAML \& SASS
     CSS3 \& HTML5
+    Python, C, Matlab
 \end{aside}
 
 \section{interests}
 
-complex networks, social networks, community detection, community structure,
-overlapping communities, information diffusion, viral marketing, social
-inference, recommendation, data mining
+web applications, design, social networks, viral marketing, algorithms, open source software, android development, education reform, adventures, culture, photography, music
 
 \section{education}
 
 \begin{entrylist}
   \entry
-    {since 2009}
-    {Ph.D. {\normalfont candidate in Computer Science}}
-    {DNET/INRIA, LIP/ÉNS de Lyon}
-    {\emph{A Quantified Theory of Social Cohesion.}}
+    {Since 2010}
+    {Georgia Insitute of Technology}
+    {Computer Engineering}
+    {GPA: 3.65\newline}
   \entry
-    {2007–2008}
-    {M.Sc. magna cum laude}
-    {IXXI, École Normale Supérieure de Lyon}
-    {Majoring in Computer Science\\
-    Specialization in Complex Systems}
+    {2009}
+    {Cornell Summer College}
+    {Business Administration}
+    {GPA: 4.0\newline}
   \entry
-    {2006–2007}
-    {B.Sc. magna cum laude}
-    {École Normale Supérieure de Lyon}
-    {Majoring in Computer Science}
-  \entry
-    {2003–2006}
-    {Classes Préparatoires aux Grandes Écoles}
-    {Lycée Fénelon, Lycée Louis le Grand, Paris}
-    {Preparation for national competitive entrance exams to leading French ``grandes écoles'', specializing in mathematics and physics.}
-  \entry
-    {2003}
-    {French Baccalauréat S. with honors}
-    {Lycée Louis le Grand, Paris}
-    {Specialization in mathematics and physics}
+    {2006–2010}
+    {Bridgewater Raritan High School}
+    {}
+    {GPA: 4.2\newline}
 \end{entrylist}
 
 \section{experience}
 
 \begin{entrylist}
   \entry
-    {02–07 2009}
-    {LIP6/CNRS, Paris}
-    {Research Internship.}
-    {\emph{Visualization of complex networks.}}
+    {03– 2012}
+    {Boutine, Inc. - San Francisco, CA}
+    {Web Developer}
+    {\emph{- Design and implementation of e-commerce site using Rails
+    \newline - Following Agile development, using TDD/BCC techniques
+    \newline - Works with a small team and is exposed to every part of the business\newline}}
   \entry
-    {06–08 2008}
-    {ISCPIF/CNRS, Paris}
-    {Research Internship.}
-    {\emph{Diffusion in the Blogosphere. Happy Flu.}}
+    {06–08 2011}
+    {AT\&T - Atlanta, GA}
+    {IT Disaster Recovery}
+    {\emph{- Upkeep of recovery plans in a massive application database
+    \newline - Used Business Objects to create a variety of reports to analyze strategy gaps
+    \newline - Researched mobile cloud as a replacement to traditional data centers\newline}}
   \entry
-    {06–08 2007}
-    {LIP6/CNRS, Paris}
-    {Research Internship.}
-    {\emph{Kernels in real world networks.}}
-  \entry
-    {07–08 2005}
-    {\href{http://www.kelkoo.com}{Kelkoo.com}}
-    {Summer job.}
-    {\emph{Creation of a keyword generator for Google Adwords.}}
-  \entry
-    {07–08 2004}
-    {\href{http://www.monsieurprix.com}{MonsieurPrix.com}}
-    {Summer job.}
-    {\emph{Development of an e-commerce product indexation spider.}}
+    {2008–2010}
+    {Somerset Medical Center - Somerville, NJ}
+    {Teen Intern}
+    {\emph{- Shadowed doctors and nurses\newline}}
 \end{entrylist}
 
-\section{applications}
+\section{activites}
 
 \begin{entrylist}
   \entry
-    {2012}
-    {Who did I forget ?}
-    {\href{http://whodidiforget.com}{whodidiforget.com}}
-    {Guest list recommendation for Facebook events based on friends already attending the event.}
+    {2011-2012}
+    {Theta Chi Fraternity}
+    {Philanthropy and Technology Chair}
+    {}
   \entry
     {2011}
-    {Fellows}
-    {\href{http://fellows-exp.com}{fellows-exp.com}}
-    {Automatic community detection among Facebook Friends in order to validate the \emph{cohesion} measure, creation of friend lists.}
+    {National Society of Collegiate Scholars}
+    {VP of PACE}
+    {}
   \entry
-    {2008}
-    {Happy Flu}
-    {\href{http://happyflu.com}{happyflu.com}}
-    {Experiment aimed to measure viral spreading of content across the blogosphere.}
+    {2011}
+    {Delta Epsilon Iota Honors Society}
+    {VP of Community Service}
+    {}
+  \entry
+    {2010-2011}
+    {Georgia Tech SGA}
+    {Freshman Leadership Organization}
+    {}
 \end{entrylist}
-
-\section{publications}
-
-\printbibsection{article}{article in peer-reviewed journal}
-\printbibsection{inproceedings}{peer-reviewed conferences/proceedings}
-\printbibsection{misc}{other publications}
-\printbibsection{report}{research reports}
-
 \end{document}
