--- a/cv.tex
+++ b/cv.tex
@@ -8,7 +8,7 @@
 % In the aside, each new line forces a line break
 \begin{aside}
   \section{about}
-     908-248-2156
+     \#: 908-248-2156
     \href{mailto:william@boutine.com}{william@boutine.com}
     \href{http://willyum.github.com}{willyum.github.com}
     \href{http://facebook.com/kingwillah}{fb} | \href{http://www.linkedin.com/profile/view?id=158614185}{linkin} | \href{https://twitter.com/#!/wking124}{tweet}
@@ -64,6 +64,11 @@ web applications, design, social networks, viral marketing, algorithms, open sou
     \newline - Used Business Objects to create a variety of reports to analyze strategy gaps
     \newline - Researched mobile cloud as a replacement to traditional data centers\newline}}
   \entry
+    {2009–2010}
+    {International House of Pancakes}
+    {Waiter - Bus - Host}
+    {}
+  \entry
     {2008–2010}
     {Somerset Medical Center - Somerville, NJ}
     {Teen Intern}
@@ -92,6 +97,11 @@ web applications, design, social networks, viral marketing, algorithms, open sou
     {2010-2011}
     {Georgia Tech SGA}
     {Freshman Leadership Organization}
+    {}
+  \entry
+    {2009}
+    {RV Chinese School Speech Contest Winner}
+    {1st place, 2nd place}
     {}
 \end{entrylist}
 \end{document}
