--- a/cv.tex
+++ b/cv.tex
@@ -9,14 +9,16 @@
 \begin{aside}
   \section{about}
      \#: 908-248-2156
-    \href{mailto:william@boutine.com}{william@boutine.com}
+    \href{mailto:iamwillking@gmail.com}{iamwillking@gmail.com}
     \href{http://willyum.github.com}{willyum.github.com}
-    \href{http://facebook.com/kingwillah}{fb} | \href{http://www.linkedin.com/profile/view?id=158614185}{linkin} | \href{https://twitter.com/#!/wking124}{tweet}
-  \section{programming}
+    \href{http://facebook.com/iamwillking}{fb} | \href{http://www.linkedin.com/profile/view?id=158614185}{linkin} | \href{https://twitter.com/#!/iamwillking}{tweet}
+  \section{Skills}
     Ruby, Rails
     JavaScript
     CoffeeScript
     Backbone.js
+    MongoDB
+    TDD \& BDD
     HAML \& SASS
     CSS3 \& HTML5
     Python, C, Matlab
@@ -24,7 +26,7 @@
 
 \section{interests}
 
-web applications, design, social networks, viral marketing, algorithms, open source software, android development, education reform, adventures, culture, photography, music
+web applications, design, user experience, A/B testing, growth hacking, optomization, open source software, android development, education reform, adventures, culture, photography, music
 
 \section{education}
 
@@ -33,14 +35,14 @@ web applications, design, social networks, viral marketing, algorithms, open sou
     {Since 2010}
     {Georgia Insitute of Technology}
     {Computer Engineering}
-    {GPA: 3.65\newline}
+    {GPA: 3.68\newline}
   \entry
     {2009}
     {Cornell Summer College}
     {Business Administration}
     {GPA: 4.0\newline}
   \entry
-    {2006–2010}
+    {2006-2010}
     {Bridgewater Raritan High School}
     {}
     {GPA: 4.2\newline}
@@ -50,58 +52,54 @@ web applications, design, social networks, viral marketing, algorithms, open sou
 
 \begin{entrylist}
   \entry
-    {03– 2012}
-    {Boutine, Inc. - San Francisco, CA}
-    {Web Developer}
-    {\emph{- Design and implementation of e-commerce site using Rails
-    \newline - Following Agile development, using TDD/BCC techniques
-    \newline - Works with a small team and is exposed to every part of the business\newline}}
+    {07-09 2012}
+    {Claco.com}
+    {Front End Engineer}
+    {\emph{- Designed and implemented an email system with feed updates
+    \newline - Led Agile Scrum meetings for small group of developers
+    \newline - Led code clean up initiative to standardize styling and add unit tests\newline}}
   \entry
-    {06–08 2011}
+    {04-06 2012}
+    {Loop/Recur}
+    {Cross-Platform Mobile App Developer}
+    {\emph{- Built Android/iPhone apps with Appcelerator Titanium
+    \newline - Led continuous development initiative using Jenkins CI
+    \newline - Followed Agile development TDD/BDD practices with Jasmine\newline}}
+  \entry
+    {02-04 2012}
+    {Boutine, Inc. - San Francisco, CA}
+    {Junior Web Developer}
+    {\emph{- Learned SQL basics using PostgreSQL
+    \newline - Designed and implemented checkout process\newline}}
+  \entry
+    {06-08 2011}
     {AT\&T - Atlanta, GA}
     {IT Disaster Recovery}
-    {\emph{- Upkeep of recovery plans in a massive application database
-    \newline - Used Business Objects to create a variety of reports to analyze strategy gaps
-    \newline - Researched mobile cloud as a replacement to traditional data centers\newline}}
-  \entry
-    {2009–2010}
-    {International House of Pancakes}
-    {Waiter - Bus - Host}
-    {}
-  \entry
-    {2008–2010}
-    {Somerset Medical Center - Somerville, NJ}
-    {Teen Intern}
-    {\emph{- Shadowed doctors and nurses\newline}}
+    {\emph{- Used Business Objects to create a variety of reports to analyze strategy gaps\newline}}
 \end{entrylist}
 
 \section{activites}
 
 \begin{entrylist}
   \entry
-    {2011-2012}
-    {Theta Chi Fraternity}
-    {Philanthropy and Technology Chair}
+    {2014}
+    {StartUp Semester}
+    {Workshop Organizer}
+    {}
+  \entry
+    {2014}
+    {Atlanta User Group}
+    {Speaker and member}
+    {}
+  \entry
+    {2014}
+    {Hypepotamus}
+    {Member and promoter}
     {}
   \entry
     {2011}
     {National Society of Collegiate Scholars}
-    {VP of PACE}
-    {}
-  \entry
-    {2011}
-    {Delta Epsilon Iota Honors Society}
     {VP of Community Service}
-    {}
-  \entry
-    {2010-2011}
-    {Georgia Tech SGA}
-    {Freshman Leadership Organization}
-    {}
-  \entry
-    {2009}
-    {RV Chinese School Speech Contest Winner}
-    {1st place, 2nd place}
     {}
 \end{entrylist}
 \end{document}
