--- a/cv.tex
+++ b/cv.tex
@@ -26,7 +26,7 @@
 
 \section{interests}
 
-web applications, design, user experience, A/B testing, growth hacking, optomization, open source software, android development, education reform, adventures, culture, photography, music
+web applications, design, user experience, A/B testing, growth hacking, optomization, open source software, android development, education reform, company culture, adventures
 
 \section{education}
 
